syntax = "proto3";

package grpc.sample;

option go_package = "./sample/samplepb";

message SimpleMessage {
    int32 id = 1;
    bool is_simple = 2;
    string name = 3;
    repeated int32 sample_list = 4;
}